[metadata]
name = kaisen_common
version = 0.3.0
license = MIT
description = Scripts for encoding Jujutsu Kaisen
url = https://github.com/notdedsec/jujutsu-kaisen
author = dedsec
author_email = notdedsec@gmail.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = kaisen_common
include_package_data = True
